fix filters container on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -493,10 +493,6 @@ h3.city {
     text-align: center;
   }
 
-  .filters-container {
-    margin: 0 15px;
-  }
-
   .nav-link {
     font-size: 0.7rem;
   }
